--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
   <script src="bookmarks.js"></script>
   <script>
-    const searchUrl = "https://google.com/search?q=";
+    const searchUrl = "https://duckduckgo.com/?q=";
     // Search on enter key event
     function search(e) {
       if (e.keyCode == 13) {
@@ -53,22 +53,27 @@
         (sec < 10 ? "0" + sec : sec)
       );
     }
+    function convertToF(celsius) {
+      return (celsius * 9) / 5 + 32;
+    }
     // Handle Weather request
     function getWeather() {
       let xhr = new XMLHttpRequest();
       // Request to open weather map
       xhr.open(
         "GET",
-        "http://api.openweathermap.org/data/2.5/weather?id=4737316&units=imperial&appid=e5b292ae2f9dae5f29e11499c2d82ece"
+        "https://api.open-meteo.com/v1/forecast?latitude=45.6387&longitude=-122.6615&current=temperature_2m,rain"
       );
       xhr.onload = () => {
         if (xhr.readyState === 4) {
           if (xhr.status === 200) {
             let json = JSON.parse(xhr.responseText);
             document.getElementById("temp").innerHTML =
-              json.main.temp.toFixed(0) + " F";
+              convertToF(json.current.temperature_2m.toFixed(0)) + " F";
             document.getElementById("weather-description").innerHTML =
-              json.weather[0].description;
+              json.current.rain > 0
+                ? "Raining"
+                : "Clear";
           } else {
             console.log("error msg: " + xhr.status);
           }
